# PowerKraut

./: .gitignore  PowerKraut.sln  README.md
PowerKraut/: PowerKraut.csproj
PowerKraut/src/kraut/core/: PowerKraut.cs
PowerKraut/src/kraut/util/exceptions/: KrautVKUndefinedException.cs  KrautVKVulkanDeviceCreationFailedException.cs  KrautVKVulkanFramebufferCreationFailed.cs  KrautVKVulkanInstanceCreationFailedException.cs  KrautVKVulkanNotSupportedException.cs  KrautVKWindowCreationFailedException.cs
PowerKraut/src/krautvk/: CMakeLists.txt
PowerKraut/src/krautvk/lib/spirv/: shader.vert  shaderbuilder.bat  shaderfrag.spv  shadervert.spv
PowerKraut/src/krautvk/src/: KrautVK.cpp  KrautVK.h  KrautVKCommon.cpp  KrautVKCommon.h  KrautVKConfig.h.in  KrautVKExport.h
PowerKraut_Core/: PowerKraut_Core.csproj
PowerKraut_Core/src/kraut/core/: PowerKraut.cs
PowerKraut_Core/src/kraut/netwrapper/: KrautVK.cs
PowerKraut_Core/src/kraut/util/exceptions/: KrautVKInitFailedException.cs  KrautVKSemaphoreCreationFailedException.cs  KrautVKUndefinedException.cs  KrautVKVulkanCommandBufferCreationFailed.cs  KrautVKVulkanFenceCreationFailed.cs  KrautVKVulkanNotSupportedException.cs  KrautVKVulkanPipelineCreationFailed.cs  KrautVKVulkanRenderPassCreationFailed.cs  KrautVKVulkanSurfaceCreationFailedException.cs  KrautVKVulkanVertexCreationFailed.cs  KrautVKWindowCreationFailedException.cs  VulkanSurfaceCreationFailedException.cs
PowerKraut_Core/src/krautvk/: CMakeLists.txt  KrautVK.cpp  KrautVK.h  KrautVK.hpp  library.c  library.h
PowerKraut_Core/src/krautvk/lib/spirv/: shader.frag  shader.vert  shaderbuilder.bat  shaderfrag.spv  shadervert.spv
PowerKraut_Core/src/krautvk/src/: KrautVK.cpp  KrautVK.h  KrautVKCommon.cpp  KrautVKCommon.h  KrautVKExport.cpp
PowerKraut_Core/src/vulkan/: KrautVK.cs
